<resources>
    <string name="app_name">Wortel</string>
    <string name="win">Gewonnen!</string>
    <string name="lose">Spielende!</string>
    <string name="moves_of">%d/%d</string>
    <string name="moves_of_long">Versuche: %d/%d</string>
    <string name="new_game">Neues Spiel</string>
    <string name="stats">Statistiken</string>
    <string name="how_to">Spielregeln</string>
    <string name="send">Senden</string>
    <string name="stats_of">%s\'s Statistik</string>
    <string name="word_id">#%d</string>
    <string name="close">Schliessen</string>
    <string name="n_solved">Gelöst: %d von %d</string>
    <string name="no_internet">Keine Internetverbindung</string>
    <string name="reload">Neu Laden</string>
    <string name="no_change">Aktive Nutzerdaten sind unverändert.</string>
    <string name="wrong_user">Die Nutzerdaten sind nicht korrekt.</string>
    <string name="text_empty">Das Feld darf nicht leer sein.</string>
    <string name="text_long">Maximal 250 Zeichen erlaubt.</string>
    <string name="text_starts_user">Nur generische Namen dürfen mit \"user\" beginnen.</string>
    <string name="text_starts_deleted">Name darf nicht mit \"deleted\" beginnen.</string>
    <string name="username_taken">Diese Name ist bereits vergeben.</string>
    <string name="data_changed">Nutzerdaten erfolgreich geändert.</string>
    <string name="login_ok">Nutzer erfolgreich eingeloggt.</string>
    <string name="profile">Profil</string>
    <string name="username">Nutzername</string>
    <string name="password">Passwort</string>
    <string name="change_data">Daten ändern</string>
    <string name="login">Login</string>
    <string name="delete_data_title">Alle Daten Löschen</string>
    <string name="delete_data_desc">Hiermit werden alle Nutzerdaten, Spiele und die Statistik gelöscht.</string>
    <string name="delete_data_confirm">Löschen</string>
    <string name="cancel">Abbrechen</string>
    <string name="profile_desc">Dies sind deine Nutzerdaten. Du kannst sie verwenden um dich an anderen Geräten einzuloggen.</string>
    <string name="profile_desc2">Ändere hier Nutzername oder Passwort, oder logge dich mit einem existierenden Account ein.</string>
    <string name="profile_desc3">Außer diesen Daten werden keine persönlichen Informationen gespeichert. Um deinen Account mit allen Daten zu löschen kannst du den Button oben rechts nutzen.</string>
    <string name="not_found">Wort nicht in Liste!</string>
    <string name="meaning">➜ Bedeutung</string>
    <string name="header_stats">Benötigte Versuche</string>
    <string name="header_word_list">Gelöste Begriffe</string>
    <string name="explanation_link">https://www.openthesaurus.de/synonyme/%s</string>
    <string name="rules1">Errate das Wortel in 6 Versuchen!</string>
    <string name="rules2">Gib dazu ein existierendes Wort mit genau 5 Buchstaben ein und überprüfe es. Die Farben der Buchstaben ändern sich, und zeigen an wie Nahe dein Wort an dem gesuchten Begriff liegt.</string>
    <string name="rules3">Beispiel:</string>
    <string name="rules4">Das gesuchte Wort ist TAFEL.</string>
    <string name="rules5">Als Hilfe gibt es drei Farbcodes:</string>
    <string name="rules6">Das A ist an der richtigen Stelle.</string>
    <string name="rules7">Das E ist im gesuchten Wort enthalten, aber an einer anderen Stelle.</string>
    <string name="rules8">Die Buchstaben R, U und P kommen im gesuchten Wort nicht vor.</string>
    <string name="rules9">Entwickelt von © Data-Visions.de\n\nIn anlehnung an das Spielprinzip von Lingo und \"Wordle\" von Josh Wardle.\n\nImpressum sowie Datenschutzerklärung finden Sie auf der Google Play Store Seite dieser App.</string>
    <string name="w">W</string>
    <string name="ordle">ortel</string>
    <string name="unlimited">Unlimited</string>
    <string name="ex_word_id">#1765</string>
    <string name="ex_letter">W</string>
    <string name="ex_user">user1234</string>
</resources>