<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="?android:attr/windowBackground"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:liftOnScroll="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/back"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                app:iconTint="?android:attr/textColor"
                android:layout_marginStart="8dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/ic_back"
                app:iconGravity="textStart"
                app:iconSize="32dp"
                />


            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="@font/letters"
                android:text="@string/profile"
                android:textSize="28sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/ic_delete"
                app:iconGravity="textStart"
                app:iconSize="28dp"
                app:iconTint="@color/fgRed"/>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        tools:layout_editor_absoluteX="24dp">

        <TextView
            android:id="@+id/profile_desc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_desc"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/header_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/profile_desc2"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/message" />

        <TextView
            android:id="@+id/profile_desc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/profile_desc2"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/message" />

        <TextView
            android:id="@+id/profile_desc3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/profile_desc3"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/profile_desc2" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_lay"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:endIconMode="none"
            app:expandedHintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/passwordLay"
            app:layout_constraintTop_toBottomOf="@+id/profile_desc1"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLay"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:expandedHintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/change_data"
            app:layout_constraintTop_toBottomOf="@+id/name_lay">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/change_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/change_data"
            app:icon="@drawable/ic_save"
            android:textSize="11sp"
            app:backgroundTint="@color/secondary_button"
            app:layout_constraintBottom_toTopOf="@id/message"
            app:layout_constraintEnd_toStartOf="@id/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordLay" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:text="@string/login"
            app:icon="@drawable/ic_login"
            android:textSize="11sp"
            app:backgroundTint="@color/primary_button"
            app:layout_constraintBottom_toBottomOf="@+id/change_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/change_data"
            app:layout_constraintTop_toTopOf="@+id/change_data" />


        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="italic"
            android:text="@string/no_change"
            android:layout_marginTop="8dp"
            android:textColor="@color/fgRed"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/change_data"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ProgressBar
            android:id="@+id/loading_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/passwordLay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/name_lay" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>